添加图片演示

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-logo">
-      <img src="sections/navigation/logo.svg" alt="TreClip" class="logo-img">
+      <img src="sections/navigation/logo.jpg" alt="TreClip" class="logo-img">
     </div>
 
     <ul class="nav-menu">
@@ -528,13 +528,13 @@
 
     <div class="hero-gallery">
       <div class="hero-image-item" data-hover-video>
-        <img src="sections/hero/hero-1.svg" alt="AI Video Creation">
+        <img src="sections/hero/hero-1.jpg" alt="AI Video Creation">
         <video loop muted playsinline>
           <source src="sections/hero/hero-1.mp4" type="video/mp4">
         </video>
       </div>
       <div class="hero-image-item" data-hover-video>
-        <img src="sections/hero/hero-2.svg" alt="Creative Videos">
+        <img src="sections/hero/hero-2.jpg" alt="Creative Videos">
         <video loop muted playsinline>
           <source src="sections/hero/hero-2.mp4" type="video/mp4">
         </video>
@@ -547,7 +547,7 @@
       <a href="#" class="btn-panel">Try Now</a>
 
       <div class="panel-featured-video" data-hover-video>
-        <img src="sections/hero/featured-video.svg" alt="Featured Video">
+        <img src="sections/hero/featured-video.jpg" alt="Featured Video">
         <video loop muted playsinline>
           <source src="sections/hero/featured.mp4" type="video/mp4">
         </video>
@@ -734,7 +734,7 @@
 
   <div class="product-gallery">
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-1.svg" alt="AI Generated Video 1">
+      <img src="sections/gallery/gallery-1.jpg" alt="AI Generated Video 1">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-1.mp4" type="video/mp4">
       </video>
@@ -745,7 +745,7 @@
     </div>
 
     <div class="gallery-item gallery-large" data-hover-video>
-      <img src="sections/gallery/gallery-2.svg" alt="AI Generated Video 2">
+      <img src="sections/gallery/gallery-2.jpg" alt="AI Generated Video 2">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-2.mp4" type="video/mp4">
       </video>
@@ -756,7 +756,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-3.svg" alt="AI Generated Video 3">
+      <img src="sections/gallery/gallery-3.jpg" alt="AI Generated Video 3">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-3.mp4" type="video/mp4">
       </video>
@@ -767,7 +767,7 @@
     </div>
 
     <div class="gallery-item gallery-wide" data-hover-video>
-      <img src="sections/gallery/gallery-4.svg" alt="AI Generated Video 4">
+      <img src="sections/gallery/gallery-4.jpg" alt="AI Generated Video 4">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-4.mp4" type="video/mp4">
       </video>
@@ -778,7 +778,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-5.svg" alt="AI Generated Video 5">
+      <img src="sections/gallery/gallery-5.jpg" alt="AI Generated Video 5">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-5.mp4" type="video/mp4">
       </video>
@@ -789,7 +789,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-6.svg" alt="AI Generated Video 6">
+      <img src="sections/gallery/gallery-6.jpg" alt="AI Generated Video 6">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-6.mp4" type="video/mp4">
       </video>
@@ -1044,7 +1044,7 @@
   <div class="features-grid">
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-1.svg" alt="AI Video Generation">
+        <img src="sections/features/feature-1.jpg" alt="AI Video Generation">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">AI Video Generation</h3>
@@ -1057,7 +1057,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-2.svg" alt="Smart Editing">
+        <img src="sections/features/feature-2.jpg" alt="Smart Editing">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">Smart Editing</h3>
@@ -1070,7 +1070,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-3.svg" alt="One-Click Export">
+        <img src="sections/features/feature-3.jpg" alt="One-Click Export">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">One-Click Export</h3>
@@ -1083,7 +1083,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-4.svg" alt="Collaboration Tools">
+        <img src="sections/features/feature-4.jpg" alt="Collaboration Tools">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">Collaboration Tools</h3>
@@ -1387,7 +1387,7 @@
 <footer class="footer">
   <div class="footer-grid">
     <div class="footer-brand">
-      <img src="sections/footer/logo.svg" alt="TreClip" class="footer-logo">
+      <img src="sections/footer/logo.jpg" alt="TreClip" class="footer-logo">
       <p class="footer-tagline">
         AI-powered video creation platform for creators who want to make stunning content effortlessly.
       </p>
