--- a/sections/features/features.html
+++ b/sections/features/features.html
@@ -118,7 +118,7 @@
   <div class="features-grid">
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-1.svg" alt="AI Video Generation">
+        <img src="sections/features/feature-1.jpg" alt="AI Video Generation">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">AI Video Generation</h3>
@@ -131,7 +131,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-2.svg" alt="Smart Editing">
+        <img src="sections/features/feature-2.jpg" alt="Smart Editing">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">Smart Editing</h3>
@@ -144,7 +144,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-3.svg" alt="One-Click Export">
+        <img src="sections/features/feature-3.jpg" alt="One-Click Export">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">One-Click Export</h3>
@@ -157,7 +157,7 @@
 
     <div class="feature-card" data-animate>
       <div class="feature-visual">
-        <img src="sections/features/feature-4.svg" alt="Collaboration Tools">
+        <img src="sections/features/feature-4.jpg" alt="Collaboration Tools">
       </div>
       <div class="feature-content">
         <h3 class="feature-title">Collaboration Tools</h3>
