--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -149,7 +149,7 @@
 <footer class="footer">
   <div class="footer-grid">
     <div class="footer-brand">
-      <img src="sections/footer/logo.svg" alt="TreClip" class="footer-logo">
+      <img src="sections/footer/logo.jpg" alt="TreClip" class="footer-logo">
       <p class="footer-tagline">
         AI-powered video creation platform for creators who want to make stunning content effortlessly.
       </p>
