--- a/sections/gallery/gallery.html
+++ b/sections/gallery/gallery.html
@@ -129,7 +129,7 @@
 
   <div class="product-gallery">
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-1.svg" alt="AI Generated Video 1">
+      <img src="sections/gallery/gallery-1.jpg" alt="AI Generated Video 1">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-1.mp4" type="video/mp4">
       </video>
@@ -140,7 +140,7 @@
     </div>
 
     <div class="gallery-item gallery-large" data-hover-video>
-      <img src="sections/gallery/gallery-2.svg" alt="AI Generated Video 2">
+      <img src="sections/gallery/gallery-2.jpg" alt="AI Generated Video 2">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-2.mp4" type="video/mp4">
       </video>
@@ -151,7 +151,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-3.svg" alt="AI Generated Video 3">
+      <img src="sections/gallery/gallery-3.jpg" alt="AI Generated Video 3">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-3.mp4" type="video/mp4">
       </video>
@@ -162,7 +162,7 @@
     </div>
 
     <div class="gallery-item gallery-wide" data-hover-video>
-      <img src="sections/gallery/gallery-4.svg" alt="AI Generated Video 4">
+      <img src="sections/gallery/gallery-4.jpg" alt="AI Generated Video 4">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-4.mp4" type="video/mp4">
       </video>
@@ -173,7 +173,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-5.svg" alt="AI Generated Video 5">
+      <img src="sections/gallery/gallery-5.jpg" alt="AI Generated Video 5">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-5.mp4" type="video/mp4">
       </video>
@@ -184,7 +184,7 @@
     </div>
 
     <div class="gallery-item" data-hover-video>
-      <img src="sections/gallery/gallery-6.svg" alt="AI Generated Video 6">
+      <img src="sections/gallery/gallery-6.jpg" alt="AI Generated Video 6">
       <video loop muted playsinline>
         <source src="sections/gallery/gallery-6.mp4" type="video/mp4">
       </video>
