--- a/sections/hero/hero.html
+++ b/sections/hero/hero.html
@@ -265,13 +265,13 @@
 
     <div class="hero-gallery">
       <div class="hero-image-item" data-hover-video>
-        <img src="sections/hero/hero-1.svg" alt="AI Video Creation">
+        <img src="sections/hero/hero-1.jpg" alt="AI Video Creation">
         <video loop muted playsinline>
           <source src="sections/hero/hero-1.mp4" type="video/mp4">
         </video>
       </div>
       <div class="hero-image-item" data-hover-video>
-        <img src="sections/hero/hero-2.svg" alt="Creative Videos">
+        <img src="sections/hero/hero-2.jpg" alt="Creative Videos">
         <video loop muted playsinline>
           <source src="sections/hero/hero-2.mp4" type="video/mp4">
         </video>
@@ -284,7 +284,7 @@
       <a href="#" class="btn-panel">Try Now</a>
 
       <div class="panel-featured-video" data-hover-video>
-        <img src="sections/hero/featured-video.svg" alt="Featured Video">
+        <img src="sections/hero/featured-video.jpg" alt="Featured Video">
         <video loop muted playsinline>
           <source src="sections/hero/featured.mp4" type="video/mp4">
         </video>
