--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -149,7 +149,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-logo">
-      <img src="sections/navigation/logo.svg" alt="TreClip" class="logo-img">
+      <img src="sections/navigation/logo.jpg" alt="TreClip" class="logo-img">
     </div>
 
     <ul class="nav-menu">
